--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,16 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" id="WebApp_ID" version="2.5">
-  <display-name>CMS</display-name>
-  <welcome-file-list>
-    <welcome-file>index.html</welcome-file>
-    <welcome-file>index.htm</welcome-file>
-    <welcome-file>index.jsp</welcome-file>
-    <welcome-file>default.html</welcome-file>
-    <welcome-file>default.htm</welcome-file>
-    <welcome-file>default.jsp</welcome-file>
-  </welcome-file-list>
-  
-  <servlet>
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
+	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
+	id="WebApp_ID" version="2.5">
+	<display-name>CMS</display-name>
+	<welcome-file-list>
+		<welcome-file>index.html</welcome-file>
+		<welcome-file>index.htm</welcome-file>
+		<welcome-file>index.jsp</welcome-file>
+		<welcome-file>default.html</welcome-file>
+		<welcome-file>default.htm</welcome-file>
+		<welcome-file>default.jsp</welcome-file>
+	</welcome-file-list>
+
+	<servlet>
 		<servlet-name>articles</servlet-name>
 		<servlet-class>com.cms.servlet.ArticlesServlet</servlet-class>
 	</servlet>
@@ -19,7 +22,7 @@
 		<servlet-name>articles</servlet-name>
 		<url-pattern>/articles</url-pattern>
 	</servlet-mapping>
-	
+
 	<servlet>
 		<servlet-name>article</servlet-name>
 		<servlet-class>com.cms.servlet.ArticlesOprateServlet</servlet-class>
@@ -29,7 +32,7 @@
 		<servlet-name>article</servlet-name>
 		<url-pattern>/article</url-pattern>
 	</servlet-mapping>
-	
+
 	<servlet>
 		<servlet-name>links</servlet-name>
 		<servlet-class>com.cms.servlet.LinksServlet</servlet-class>
@@ -39,7 +42,18 @@
 		<servlet-name>links</servlet-name>
 		<url-pattern>/links</url-pattern>
 	</servlet-mapping>
-	
+
+
+	<servlet>
+		<servlet-name>admin_messages</servlet-name>
+		<servlet-class>com.cms.servlet.AdminMessagesServlet</servlet-class>
+	</servlet>
+
+	<servlet-mapping>
+		<servlet-name>admin_messages</servlet-name>
+		<url-pattern>/admin_messages</url-pattern>
+	</servlet-mapping>
+
 	<servlet>
 		<servlet-name>link</servlet-name>
 		<servlet-class>com.cms.servlet.LinkOprateServlet</servlet-class>
@@ -49,17 +63,17 @@
 		<servlet-name>link</servlet-name>
 		<url-pattern>/link</url-pattern>
 	</servlet-mapping>
-	
-	<servlet>
-        <servlet-name>login</servlet-name>
-        <servlet-class>com.cms.servlet.LoginServlet</servlet-class>
-    </servlet>
 
-    <servlet-mapping>
-        <servlet-name>login</servlet-name>
-        <url-pattern>/login</url-pattern>
-    </servlet-mapping>
-	
+	<servlet>
+		<servlet-name>login</servlet-name>
+		<servlet-class>com.cms.servlet.LoginServlet</servlet-class>
+	</servlet>
+
+	<servlet-mapping>
+		<servlet-name>login</servlet-name>
+		<url-pattern>/login</url-pattern>
+	</servlet-mapping>
+
 	<servlet>
 		<servlet-name>images</servlet-name>
 		<servlet-class>com.cms.servlet.ImagesServlet</servlet-class>
@@ -69,24 +83,24 @@
 		<servlet-name>images</servlet-name>
 		<url-pattern>/images</url-pattern>
 	</servlet-mapping>
-	
+
 	<servlet>
 		<servlet-name>image</servlet-name>
 		<servlet-class>com.cms.servlet.ImageOprateServlet</servlet-class>
 	</servlet>
-	
+
 	<servlet-mapping>
 		<servlet-name>image</servlet-name>
 		<url-pattern>/image</url-pattern>
 	</servlet-mapping>
-	
-	<servlet>
-        <servlet-name>messages</servlet-name>
-        <servlet-class>com.cms.servlet.MessagesOperateServlet</servlet-class>
-    </servlet>
 
-    <servlet-mapping>
-        <servlet-name>messages</servlet-name>
-        <url-pattern>/messages</url-pattern>
-    </servlet-mapping>
+	<servlet>
+		<servlet-name>messages</servlet-name>
+		<servlet-class>com.cms.servlet.MessagesOperateServlet</servlet-class>
+	</servlet>
+
+	<servlet-mapping>
+		<servlet-name>messages</servlet-name>
+		<url-pattern>/messages</url-pattern>
+	</servlet-mapping>
 </web-app>
