--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -124,4 +124,24 @@
 		<servlet-name>messages</servlet-name>
 		<url-pattern>/messages</url-pattern>
 	</servlet-mapping>
+	
+	   <servlet>
+        <servlet-name>users</servlet-name>
+        <servlet-class>com.cms.servlet.UsersServlet</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>users</servlet-name>
+        <url-pattern>/users</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>user</servlet-name>
+        <servlet-class>com.cms.servlet.UserOprateServlet</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>user</servlet-name>
+        <url-pattern>/user</url-pattern>
+    </servlet-mapping>
 </web-app>
